Fix an issue with background color of 404 page not stretching to screen edges

--- a/less/_pages/_page404.less
+++ b/less/_pages/_page404.less
@@ -3,6 +3,7 @@
 @import '../_variables/_breakpoints.less';
 
 .not-found-wrapper {
+  width: 100%;
   background-color: var(--creamcolors-color-brand-white);
   padding: @creamcolors-sizes-medium-1 @creamcolors-sizes-small-3
     @creamcolors-sizes-large-1 @creamcolors-sizes-small-3;
@@ -12,7 +13,6 @@
   }
 
   @media @break-desktop {
-    max-width: 1032px;
     margin: 0 auto;
   }
 
